unpackaged/main/default/objects/Charges__c/Charges__c.object-meta.xml
<CustomObject>
    <description>One of charges for Indirect</description>
    <label>Additional Charges</label>
    <nameField>
        <displayFormat>Charge-{00000}</displayFormat>
        <label>Additional Charges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>