unpackaged/main/default/objects/Charges__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <label>Charges</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>24/7 Customer Services</fullName>
                <isActive>false</isActive>
                <label>24/7 Customer Services</label>
            </value>
            <value>
                <fullName>3C Payment Processing Fee</fullName>
                <isActive>false</isActive>
                <label>3C Payment Processing Fee</label>
            </value>
            <value>
                <fullName>3C Project Management</fullName>
                <isActive>false</isActive>
                <label>3C Project Management</label>
            </value>
            <value>
                <fullName>3C Thermal Paper Box</fullName>
                <isActive>false</isActive>
                <label>3C Thermal Paper Box</label>
            </value>
            <value>
                <fullName>Datatrans Alias / Tokenisation</fullName>
            </value>
            <value>
                <fullName>Gateway Processing Per Location</fullName>
                <isActive>false</isActive>
                <label>Gateway Processing Per Location</label>
            </value>
            <value>
                <fullName>Gateway Processing Per Terminal</fullName>
                <isActive>false</isActive>
                <label>Gateway Processing Per Terminal</label>
            </value>
            <value>
                <fullName>Gateway Processing Per Transaction</fullName>
                <isActive>false</isActive>
                <label>Gateway Processing Per Transaction</label>
            </value>
            <value>
                <fullName>Gateway Recurring Fee</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Installation Services Per Day</fullName>
                <isActive>false</isActive>
                <label>Installation Services Per Day</label>
            </value>
            <value>
                <fullName>Integration Fee</fullName>
            </value>
            <value>
                <fullName>Location Set Up Fee Per Location</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Mobile Payment Libraries</fullName>
            </value>
            <value>
                <fullName>Onsite Installation Services Per Day</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>P2PE License Fee Per Device</fullName>
                <isActive>false</isActive>
                <label>P2PE License Fee Per Device</label>
            </value>
            <value>
                <fullName>Pay By Link</fullName>
                <isActive>false</isActive>
                <label>Pay By Link</label>
            </value>
            <value>
                <fullName>PCI Compliance &amp; Security Fee</fullName>
                <isActive>false</isActive>
                <label>PCI Compliance &amp; Security Fee</label>
            </value>
            <value>
                <fullName>PCI Compliance &amp; Tokenization</fullName>
                <isActive>false</isActive>
                <label>PCI Compliance &amp; Tokenization</label>
            </value>
            <value>
                <fullName>POS/PMS Integration Module Per Location</fullName>
            </value>
            <value>
                <fullName>Protel Interface</fullName>
                <isActive>false</isActive>
                <label>Protel Interface</label>
            </value>
            <value>
                <fullName>Remote Engineer</fullName>
                <isActive>false</isActive>
                <label>Remote Engineer</label>
            </value>
            <value>
                <fullName>Rental 3C Terminal P2PE PAX A920</fullName>
                <isActive>false</isActive>
                <label>Rental 3C Terminal P2PE PAX A920</label>
            </value>
            <value>
                <fullName>Service &amp; Support Recurring Fee Per Location</fullName>
            </value>
            <value>
                <fullName>Service &amp; Support Recurring Fee Per Terminal</fullName>
                <isActive>false</isActive>
                <label>Service &amp; Support Recurring Fee Per Terminal</label>
            </value>
            <value>
                <fullName>SIM Rental</fullName>
                <isActive>false</isActive>
                <label>SIM Rental</label>
            </value>
            <value>
                <fullName>Software License Fee Per Device</fullName>
                <isActive>false</isActive>
                <label>Software License Fee Per Device</label>
            </value>
            <value>
                <fullName>Terminal/PED Docking Unit Per Device</fullName>
                <isActive>false</isActive>
                <label>Terminal/PED Docking Unit Per Device</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>