unpackaged/main/default/objects/Charges__c/fields/Recurring_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Quantity__c</fullName>
    <defaultValue>12</defaultValue>
    <description>default read only value used for annualised charges</description>
    <label>Recurring Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>