unpackaged/main/default/objects/Charges__c/fields/Setup__c.field-meta.xml
<CustomField>
    <fullName>Setup__c</fullName>
    <label>Setup</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Charges__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay by link</fullName>
            </value>
            <value>
                <fullName>i-Pay</fullName>
            </value>
            <value>
                <fullName>Straight W2P Website/Booking Engine</fullName>
            </value>
            <value>
                <fullName>Remote installation</fullName>
            </value>
            <value>
                <fullName>Onsite installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>