unpackaged/main/default/objects/Charges__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>IF(TEXT(Charges__c)=&quot;Incentive&quot;,0-(Unit_Price__c*Quantity__c), 
IF(TEXT(Charges__c)=&quot;Terminal Rental Fee Per Terminal&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;SIM Rental&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Gateway Recurring Fee&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Service &amp; Support Recurring Fee Per Location&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Service &amp; Support Recurring Fee Per Terminal&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Terminal Managed Services Per Terminal&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Token Service Support Per Merchant&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Gateway Processing Per Location&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Gateway Processing Per Terminal&quot;,(Unit_Price__c*Recurring_Quantity__c), 
IF(TEXT(Charges__c)=&quot;Other&quot; &amp;&amp; TEXT(Type__c)&lt;&gt;&quot;One Off&quot;,(Unit_Price__c*Recurring_Quantity__c),
Unit_Price__c  *  Quantity__c)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>