unpackaged/main/default/objects/Charges__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>One Off Charge Type</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Off</fullName>
            </value>
            <value>
                <fullName>Monthly Recurring</fullName>
                <label>Annualised Monthly Recurring</label>
            </value>
            <value>
                <fullName>Monthly Gateway</fullName>
                <isActive>false</isActive>
                <label>Monthly Gateway</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>