unpackaged/main/default/objects/Charges__c/fields/What_is_this_charge__c.field-meta.xml
<CustomField>
    <fullName>What_is_this_charge__c</fullName>
    <description>A description of the selected Charge - Saurabh 16/11/21</description>
    <inlineHelpText>A description of the selected Charge</inlineHelpText>
    <label>What is this charge?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Charges__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware purchase of payment device</fullName>
            </value>
            <value>
                <fullName>Usually for charging a mobile device and can have a comms link to payment device (ie – Bluetooth or Ethernet Base to Connect PAX A920 for fixed device option)</fullName>
            </value>
            <value>
                <fullName>Planet Software License Fee Charge</fullName>
            </value>
            <value>
                <fullName>SRED Key Loading and Licensing</fullName>
            </value>
            <value>
                <fullName>Either Remote or On-Site Installations. Usually half days charged for remote and full days for on-site</fullName>
            </value>
            <value>
                <fullName>Charged as a fee for the solution being linked to or being able to link to a desired POS or PMS</fullName>
            </value>
            <value>
                <fullName>Set Up of MIDs, TIDs &amp; Planet Portal Set Up</fullName>
            </value>
            <value>
                <fullName>Can be used for Pay by link, i-Pay, and Straight W2P Website/Booking Engine set ups</fullName>
            </value>
            <value>
                <fullName>Set up of the merchants token account and service</fullName>
            </value>
            <value>
                <fullName>Gateway processing paid per location</fullName>
            </value>
            <value>
                <fullName>Gateway processing paid per terminal/PED and equated through review of actual transaction volumes to come to a mean average cost per terminal</fullName>
            </value>
            <value>
                <fullName>Service and Support fee</fullName>
            </value>
            <value>
                <fullName>Token generation, handling and storage</fullName>
            </value>
            <value>
                <fullName>Hardware rental fee applied usually over a minimum of 36 months</fullName>
            </value>
            <value>
                <fullName>This is next day swap services and hardware replacement for terminal breakages</fullName>
            </value>
            <value>
                <fullName>Incentive to switch on payment contract (excluding integration), should be filled in negative</fullName>
            </value>
            <value>
                <fullName>Monthly Recurring Gateway Fee, which can also include other monthly hosting fees for the campaign</fullName>
            </value>
            <value>
                <fullName>Data Trans Payment Gateway Once Off Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>