unpackaged/main/default/objects/Charges__c/validationRules/Enter_description_if_Other_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_description_if_Other_selected</fullName>
    <active>true</active>
    <description>if user selects Other, force them to enter a description</description>
    <errorConditionFormula>ISPICKVAL(Charges__c  , &quot;Other&quot;) &amp;&amp;  Description__c = &quot;&quot;</errorConditionFormula>
    <errorMessage>As you selected charge &#39;Other&#39;, please enter a description</errorMessage>
</ValidationRule>